<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navMovie">

    <fragment
        android:id="@+id/navMovie"
        android:name="com.fahrul.rackmovies.ui.fragment.MoviesFragment"
        android:label="@string/movie"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navTV"
        android:name="com.fahrul.rackmovies.ui.fragment.TVFragment"
        android:label="@string/tv"
        tools:layout="@layout/fragment_tv" />

    <fragment
        android:id="@+id/navFavorit"
        android:name="com.fahrul.rackmovies.ui.fragment.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>