<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SettingActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="100dp"/>

    <TextView
        android:id="@+id/txtReminder1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/release_reminder"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideLine"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtReminderInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/detail_text_remider"
        app:layout_constraintTop_toBottomOf="@id/txtReminder1"
        app:layout_constraintLeft_toLeftOf="@id/txtReminder1"
        app:layout_constraintRight_toRightOf="@id/guideLine"/>

    <Switch
        android:id="@+id/swRelease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guideLine"
        app:layout_constraintTop_toTopOf="@id/txtReminder1"
        app:layout_constraintBottom_toBottomOf="@id/txtReminderInfo"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/txtReminderInfo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/txtDaily1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/txtReminderInfo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideLine"
        android:text="@string/daily_reminder"/>

    <TextView
        android:id="@+id/txtDailyInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Daily reminder to return to app at 7 AM"
        app:layout_constraintTop_toBottomOf="@id/txtDaily1"
        app:layout_constraintLeft_toLeftOf="@id/txtReminder1"
        app:layout_constraintRight_toRightOf="@id/guideLine"/>

    <Switch
        android:id="@+id/swReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guideLine"
        app:layout_constraintTop_toTopOf="@id/txtDaily1"
        app:layout_constraintBottom_toBottomOf="@id/txtDailyInfo"/>
</androidx.constraintlayout.widget.ConstraintLayout>