<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tvLy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#F1F0F0"
    tools:context=".ui.activity.DetailMoviesActivity">
    <ImageView
        android:scaleType="centerCrop"
        android:id="@+id/imgBackdrop"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:ignore="MissingConstraints"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <com.google.android.material.appbar.AppBarLayout
            app:elevation="20dp"
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:background="#65000000"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:layout_height="200dp"
            tools:ignore="MissingConstraints">
            <androidx.appcompat.widget.Toolbar
                android:background="#00000000"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />
        </com.google.android.material.appbar.AppBarLayout>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="120dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10sp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <ScrollView
            android:paddingBottom="20dp"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/judul_movie"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img_poster"
                    android:layout_width="120dp"
                    android:layout_height="170dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/image_recyclerview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvName" />

                <TextView
                    android:id="@+id/tv1"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/date_release"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/img_poster"
                    app:layout_constraintTop_toBottomOf="@+id/tvName" />

                <TextView
                    android:id="@+id/tvDate"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/date_release"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/img_poster"
                    app:layout_constraintTop_toBottomOf="@+id/tv1" />

                <TextView
                    android:id="@+id/tv2"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="Rate"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/img_poster"
                    app:layout_constraintTop_toBottomOf="@+id/tvDate" />

                <TextView
                    android:id="@+id/tvRate"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="Rate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/img_poster"
                    app:layout_constraintTop_toBottomOf="@+id/tv2" />

                <TextView
                    android:id="@+id/tv3"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/overview"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_poster" />

                <TextView
                    android:id="@+id/tvDesc"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/overview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv3" />

                <ImageButton
                    android:id="@+id/btnFav"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="?android:attr/windowBackground"
                    android:src="@drawable/ic_favorite_border_black_24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.783"
                    app:layout_constraintStart_toEndOf="@+id/tv1"
                    app:layout_constraintTop_toBottomOf="@+id/tvName" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>